[package]
name = "ruststuff"
version = "0.1.0"
authors = ["segalll <hseg1227@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
wgpu = "0.7.1"
image = "0.23.14"
cgmath = "0.18.0"
env_logger = "0.8.3"
log = "0.4.14"
futures = "0.3.14"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
anyhow = "1.0.40"
include_dir = "0.6.0"

[build-dependencies]
shaderc = "0.7.2"
anyhow = "1.0.40"
fs_extra = "1.2.0"
glob = "0.3.0"